Вход, Регистрация и ЛК

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/icons/fav.svg">
     <title>Главная | Индекс Драйв</title>
 </head>
 <body>
     <header>
         <div class="header__content">
-            <a href="#" class="header__logo">
+            <a href="#" class="header__logo header__logo-active">
                 <img src="images/icons/logotype.png" alt="Логотип" class="header__logo_image">
             </a>
             <nav>
-                <a href="#" class="nav__link">Филиалы</a>
-                <a href="#" class="nav__link">Бронирование</a>
+                <a href="pages/branches.html" class="nav__link">Филиалы</a>
+                <a href="pages/booking.html" class="nav__link">Бронирование</a>
             </nav>
-            <a href="#" class="header__link">Личный Кабинет</a>
+            <a href="pages/profile.html" class="header__link">Личный Кабинет</a>
         </div>
     </header>
     <div class="round"></div>
@@ -169,18 +170,18 @@
             <div class="footer__links">
                 <div class="footer__links_mini">
                     <a href="index.html" class="footer__link">Главная</a>
-                    <a href="" class="footer__link">Вход</a>
-                    <a href="" class="footer__link">Регистрация</a>
+                    <a href="pages/login.html" class="footer__link">Вход</a>
+                    <a href="pages/register.html" class="footer__link">Регистрация</a>
                 </div>
                 <div class="footer__links_mini">
-                    <a href="" class="footer__link">Личный Кабинет</a>
-                    <a href="" class="footer__link">Бронирование</a>
-                    <a href="" class="footer__link">История</a>
+                    <a href="pages/profile.html" class="footer__link">Личный Кабинет</a>
+                    <a href="pages/booking.html" class="footer__link">Бронирование</a>
+                    <a href="pages/history.html" class="footer__link">История</a>
                 </div>
                 <div class="footer__links_mini">
-                    <a href="" class="footer__link">Филиалы</a>
-                    <a href="" class="footer__link">Способы Оплаты</a>
-                    <a href="" class="footer__link">Выбор Автомобиля</a>
+                    <a href="pages/branches.html" class="footer__link">Филиалы</a>
+                    <a href="pages/cards.html" class="footer__link">Способы Оплаты</a>
+                    <a href="pages/car-select.html" class="footer__link">Выбор Автомобиля</a>
                 </div>
             </div>
         </div>
