--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../images/icons/fav.svg">
-    <title>Главная | Регистрация</title>
+    <title>Главная | Вход</title>
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
             <a href="tel:+78005553535" class="footer__phone">8 (800) 555-35-35<br>Индекс Драйв</a>
             <div class="footer__links">
                 <div class="footer__links_mini">
-                    <a href="index.html" class="footer__link">Главная</a>
+                    <a href="../index.html" class="footer__link">Главная</a>
                     <a href="login.html" class="footer__link">Вход</a>
                     <a href="register.html" class="footer__link">Регистрация</a>
                 </div>
